Fixed Error message z-index

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -682,7 +682,7 @@ input:checked + .slider:before {
 
 #errorAlert {
   color: var(--main-red);
-  z-index: 999;
+  z-index: -1;
 }
 
 /*****************/
